# AlphaCLIP

./: .gitignore  LICENSE  MANIFEST.in  README.md  hubconf.py  model-zoo.md  pyproject.toml  setup.py
alpha_clip/: __init__.py  alpha_clip.py  model.py
demo/with_diffusion/: README.md  app.py  requirements.txt
demo/with_llm/: .gitignore  README  README.md  app.py  requirements.txt
demo/with_llm/llava/: conversation.py
demo/with_llm/llava/eval/: eval_refcap.py  model_vqa_loader.py  model_vqa_loader_alpha_clip.py
demo/with_llm/llava/eval/cap_metrics/: __init__.py  tokenizer.py
demo/with_llm/llava/eval/cap_metrics/bleu/: __init__.py  bleu.py  bleu_scorer.py
demo/with_llm/llava/serve/: gradio_web_server.py  model_worker.py  test.sh  test_0.sh  test_1.sh  test_2.sh
eval/: README.md
eval/imagenet_s_zs_test/: .gitignore  README.md  imagenet_s.py  imagenet_s_zs_test.py
eval/imagenet_s_zs_test/data/: ImageNetS919
eval/rec_zs_test/: README.md  cal_acc.py  entity_extraction.py  executor.py  generic_clip_pairs.py  heuristics.py  interpreter.py  lattice.py  main.py  requirements.txt  run.sh  run_multi_gpus.sh
eval/rec_zs_test/methods/: __init__.py  baseline.py  parse.py  random_method.py  ref_method.py
notebooks/: attn_visual.ipynb  blip_diffusion.ipynb
tests/: test_consistency.py
train/: README.md  scheduler.py  train_slurm.sh  utils.py
train/data_prepare/: sam_grit.py
train/dataset/: alpha_grit.py  imagenet_s_test.py  mask_image.py  mask_image_test.py
train/train/: train_grit_1m+mim.py  train_grit_1m.py
(+7 files in other folders)
